Robot crm Tests

--- a/results/log.html
+++ b/results/log.html
@@ -2081,25 +2081,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,13114],[],[[5,0,6,[7,8,9],[1,273,12841],[[0,10,11,0,12,13,0,0,[1,274,0],[]],[0,14,11,0,15,16,0,0,[1,274,0],[]],[0,17,18,0,19,20,0,0,[1,275,0],[[275,2,20]]],[0,21,11,0,22,23,0,0,[1,275,8680],[[275,2,24]]],[0,25,11,0,26,27,0,0,[1,8956,577],[]],[0,28,11,0,29,30,0,0,[1,9534,314],[]],[0,31,18,0,32,33,0,0,[1,9848,3001],[[12849,2,34]]],[0,35,11,0,36,0,0,0,[1,12850,264],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,8823],[],[[5,0,6,[7,8,9],[1,143,8679],[[0,10,11,0,12,13,0,0,[1,144,0],[]],[0,14,11,0,15,16,0,0,[1,144,0],[]],[0,17,18,0,19,20,0,0,[1,145,0],[[145,2,20]]],[0,21,11,0,22,23,0,0,[1,145,3545],[[146,2,24]]],[0,25,11,0,26,27,0,0,[1,3691,305],[]],[0,28,11,0,29,30,0,0,[1,3996,339],[]],[0,31,11,0,32,33,0,0,[1,4336,1182],[[4337,2,34]]],[0,35,18,0,36,37,0,0,[1,5519,3001],[[8520,2,38]]],[0,39,11,0,40,0,0,0,[1,8521,300],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Crm","*/home/sang/PycharmProjects/Robotframework/Tests/Crm.robot","*../Tests/Crm.robot","*<p>This is some basic info about the whole suite\x3c/p>","*Should be able to add new customer","*<p>This is some basic info about the test\x3c/p>","*1006","*Contacts","*Smoke","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*.2s","*Set Selenium Timeout","*<p>Sets the timeout that is used by various keywords.\x3c/p>","*10s","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*Starting the test case!","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://automationplayground.com/crm/\">https://automationplayground.com/crm/\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://automationplayground.com/crm/\">https://automationplayground.com/crm/\x3c/a>'.","*Set Window Position","*<p>Sets window position using <code>x\x3c/code> and <code>y\x3c/code> coordinates.\x3c/p>","*x=341    y=169","*Set Window Size","*<p>Sets current windows size to given <code>width\x3c/code> and <code>height\x3c/code>.\x3c/p>","*width=1935    height=1090","*Sleep","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Crm","*/home/sang/PycharmProjects/Robotframework/Tests/Crm.robot","*../Tests/Crm.robot","*<p>This is some basic info about the whole suite\x3c/p>","*Should be able to add new customer","*<p>This is some basic info about the test\x3c/p>","*1006","*Contacts","*Smoke","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*.2s","*Set Selenium Timeout","*<p>Sets the timeout that is used by various keywords.\x3c/p>","*10s","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*Starting the test case!","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://automationplayground.com/crm/\">https://automationplayground.com/crm/\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://automationplayground.com/crm/\">https://automationplayground.com/crm/\x3c/a>'.","*Set Window Position","*<p>Sets window position using <code>x\x3c/code> and <code>y\x3c/code> coordinates.\x3c/p>","*x=341    y=169","*Set Window Size","*<p>Sets current windows size to given <code>width\x3c/code> and <code>height\x3c/code>.\x3c/p>","*width=1935    height=1090","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*name= sign-in-link","*Clicking link 'name= sign-in-link'.","*Sleep","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:13","fail":0,"label":"1006","pass":1,"skip":0},{"elapsed":"00:00:13","fail":0,"label":"Contacts","pass":1,"skip":0},{"elapsed":"00:00:13","fail":0,"label":"Smoke","pass":1,"skip":0}],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Crm","name":"Crm","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"label":"1006","pass":1,"skip":0},{"elapsed":"00:00:09","fail":0,"label":"Contacts","pass":1,"skip":0},{"elapsed":"00:00:09","fail":0,"label":"Smoke","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Crm","name":"Crm","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1710061129051;
+window.output["baseMillis"] = 1710065131348;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13122;
+window.output["generated"] = 8830;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
